force-app/main/default/objects/FNS_FinancialAccountRole__c/FNS_FinancialAccountRole__c.object-meta.xml
<CustomObject>
    <label>Product Role (NonFSC)</label>
    <nameField>
        <label>Product Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Roles (NonFSC)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>