force-app/main/default/objects/FNS_FinancialAccountRole__c/fields/FNS_FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>FNS_FinancialAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>FNS_FinancialAccount__c</referenceTo>
    <relationshipLabel>Product Roles (NonFSC)</relationshipLabel>
    <relationshipName>FinancialAccountRoles</relationshipName>
    <type>Lookup</type>
</CustomField>