force-app/main/default/objects/FNS_FinancialAccountRole__c/fields/FNS_FinancialAccountTransaction__c.field-meta.xml
<CustomField>
    <fullName>FNS_FinancialAccountTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>FNS_FinancialAccountTransaction__c</referenceTo>
    <relationshipLabel>Financial Account Roles</relationshipLabel>
    <relationshipName>Financial_Account_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>