force-app/main/default/objects/FNS_FinancialAccountRole__c/fields/FNS_GuaranteeDollar__c.field-meta.xml
<CustomField>
    <fullName>FNS_GuaranteeDollar__c</fullName>
    <label>Guarantee($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>