force-app/main/default/objects/FNS_FinancialAccountRole__c/fields/FNS_ProductRelRole__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProductRelRole__c</fullName>
    <label>Product Relationship Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_Role</valueSetName>
    </valueSet>
</CustomField>