force-app/main/default/objects/FNS_FinancialAccountRole__c/fields/FNS_RelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>FNS_RelatedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Account Roles</relationshipLabel>
    <relationshipName>Financial_Account_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>