force-app/main/default/objects/FNS_FinancialAccountRole__c/fields/FNS_RelatedContact__c.field-meta.xml
<CustomField>
    <fullName>FNS_RelatedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Financial Account Roles</relationshipLabel>
    <relationshipName>Financial_Account_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>