force-app/main/default/objects/FNS_FinancialAccountRole__c/fields/FNS_TypeofProdRole__c.field-meta.xml
<CustomField>
    <fullName>FNS_TypeofProdRole__c</fullName>
    <label>Type of Product Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_Role</valueSetName>
    </valueSet>
</CustomField>