force-app/main/default/objects/FNS_FinancialAccountRole__c/recordTypes/FNS_FinancialAccountRole.recordType-meta.xml
<RecordType>
    <fullName>FNS_FinancialAccountRole</fullName>
    <active>true</active>
    <label>Financial Product Role</label>
</RecordType>