force-app/main/default/objects/FNS_FinancialAccountRole__c/recordTypes/FNS_FinancialAccountRoleReadOnly.recordType-meta.xml
<RecordType>
    <fullName>FNS_FinancialAccountRoleReadOnly</fullName>
    <active>true</active>
    <label>Financial Product Role Read Only</label>
</RecordType>