force-app/main/default/objects/FNS_FinancialAccountRole__c/validationRules/FNS_GuaranteeFieldsValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>FNS_GuaranteeFieldsValidation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(ISBLANK(FNS_GuaranteeDollar__c), ISBLANK(FNS_GuaranteePercent__c)), AND(NOT(ISBLANK(FNS_GuaranteeDollar__c)), NOT(ISBLANK(FNS_GuaranteePercent__c))))</errorConditionFormula>
    <errorMessage>Please enter either Guarantee Amount or Percentage</errorMessage>
</ValidationRule>