force-app/main/default/objects/FNS_FinancialAccountRole__c/listViews/FNS_FinancialAccountRoles.listView-meta.xml
<ListView>
    <fullName>FNS_FinancialAccountRoles</fullName>
    <columns>NAME</columns>
    <columns>FNS_Application__c</columns>
    <columns>FNS_FinancialAccount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Financial Account Roles</label>
</ListView>